--- a/site/config.toml
+++ b/site/config.toml
@@ -1,3 +1,16 @@
 baseurl = "/"
 languageCode = "en-us"
 title = "Homepage"
+
+[outputFormats.Algolia]
+baseName = "algolia"
+isPlainText = true
+mediaType = "application/json"
+notAlternative = true
+
+[params.algolia]
+vars = ["title", "summary", "date", "publishdate", "expirydate", "permalink"]
+params = ["categories", "tags"]
+
+[outputs]
+home = ["HTML", "RSS", "Algolia"]
